packages/libs/error-stack/tests/snapshots/test_debug__full__provider_ext.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:#?}\")"
---
Root error
├╴tests/common.rs:147:5
├╴Printable A
├╴spantrace with 2 frames (1)
╰╴backtrace with [n] frames (1)

Root error
├╴tests/common.rs:147:5
├╴Printable B
├╴Test
├╴spantrace with 2 frames (2)
├╴backtrace with [n] frames (2)
╰╴1 additional opaque attachment

Root error
├╴tests/common.rs:147:5
├╴ABC
├╴Printable B
├╴Test
├╴spantrace with 2 frames (3)
├╴backtrace with [n] frames (3)
╰╴2 additional opaque attachments

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Backtrace No. 1
  [redacted]


Span Trace No. 1
  [redacted]

Backtrace No. 2
  [redacted]


Span Trace No. 2
  [redacted]

Backtrace No. 3
  [redacted]


Span Trace No. 3
  [redacted]
