packages/libs/error-stack/tests/snapshots/test_debug__full__sources.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
context A
├╴ tests/test_debug.rs:173:14
├╴ 1 additional opaque attachment
│
╰┬▶ root error
 │  ├╴ tests/common/mod.rs:4:5
 │  ├╴ backtrace (1)
 │  ├╴ span trace with 2 frames (1)
 │  ├╴ printable A
 │  ╰╴ 1 additional opaque attachment
 │
 ├▶ root error
 │  ├╴ tests/common/mod.rs:4:5
 │  ├╴ backtrace (2)
 │  ├╴ span trace with 2 frames (2)
 │  ├╴ printable B
 │  ╰╴ 1 additional opaque attachment
 │
 ╰▶ root error
    ├╴ tests/common/mod.rs:4:5
    ├╴ backtrace (3)
    ├╴ span trace with 2 frames (3)
    ├╴ printable B
    ╰╴ 1 additional opaque attachment

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]

backtrace no. 2
  [redacted]

span trace No. 2
  [redacted]

backtrace no. 3
  [redacted]

span trace No. 3
  [redacted]
